# sparsemap

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  LLM_PROVIDER_GUIDE.md  README.md  alembic.ini  biome.json  docker-compose.yml  inspect_config.py  inspect_genai.py  inspect_http_options.py  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: DEEPSEEK_FIX.md  FEATURE_COMPARISON.md  LLM_PROVIDER_GUIDE.md  PROMPT_TEST_GUIDE.md
migrations/: env.py
migrations/versions/: 0e7ab7b15f5e_add_node_embedding_table.py  57055332f100_add_title_url_sourcetype_to_.py  aedd18522d9b_initial_schema_with_analysisresult_table.py
src/sparsemap/: main.py
src/sparsemap/api/: app.py
src/sparsemap/api/routes/: analyze.py
src/sparsemap/core/: config.py
src/sparsemap/domain/: __init__.py  models.py
src/sparsemap/infra/: db.py
src/sparsemap/services/: embedding.py  exporter.py  extractor.py  llm.py  llm.py.bak  llm_provider.py  llm_utils.py  repository.py
src/sparsemap/services/providers/: __init__.py  deepseek.py  gemini.py
static/: debug.html  index.html  script.js  style.css
static/js/: api.js  exporter.js  graph.js  main.js  state.js  ui.js
tests/frontend/: exporter.test.js  state.test.js  ui.test.js
tests/unit/domain/: test_models.py
tests/unit/services/: test_exporter.py  test_llm_utils.py
verification/: verify_frontend_fix.py
